--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.6.10'
     id 'com.github.johnrengelman.shadow' version '7.0.0'
+    id 'maven-publish'
 }
 
 group 'dev.agones'
@@ -23,4 +24,16 @@ dependencies {
     implementation('com.squareup.retrofit2:retrofit:2.8.2')
     implementation('com.jaredsburrows.retrofit:retrofit2-synchronous-adapter:0.5.0')
     implementation('com.squareup.retrofit2:converter-gson:2.8.2')
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = 'dev.agones'
+            artifactId = 'agones-java-sdk'
+            version = '1.0'
+
+            from components.java
+        }
+    }
 }
